# kanji

./: Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0l5ychkgqlb0qbylffn3rqny7dvygs0a-source  5yv8fq5l9a0mscbp5f9w3vrxkyw8zcfk-source
src/: .daily.rs.swp  .main.rs.swp  .printcurr.rs.swp  .search.rs.swp  daily.rs  finish.rs  getacc.rs  getinfo.rs  getpro.rs  kanji.txt  main.rs  parsek.rs  printcurr.rs  search.rs  used.json  vtu.rs  wtf.rs
