[package]
name = "kanji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
openssl = { version = "0.10", features = ["vendored"] }
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
assert-json-diff = "1.0.0"
serde_json = "1.0.42"
ansi_term = "0.12.1"
rand = "0.8.4"
regex = "1"

